--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Node",
   "version": "1.0.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "express-handlebars": "^5.2.1"
