--- a/package.json
+++ b/package.json
@@ -6,6 +6,25 @@
     "fs-extra": "^9.1.0"
   },
   "devDependencies": {
-    "express-handlebars": "^5.2.1"
+    "express-handlebars": "^5.2.1",
+    "nodemon": "^2.0.6",
+    "husky": "^4.3.0",
+    "eslint": "^7.14.0",
+    "lint-staged": "^10.5.2",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1"
+  },
+  "lint-staged": {
+    "*.{js, json}": [
+      "eslint",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
