--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.17.1",
-    "fs-extra": "^9.1.0"
+    "fs-extra": "^9.1.0",
+    "mongoose": "^5.11.18"
   },
   "devDependencies": {
     "express-handlebars": "^5.2.1",
