--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "Node",
   "version": "1.0.0",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
+    "joi": "^17.4.0",
     "mongoose": "^5.11.18"
   },
   "devDependencies": {
