--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
     "mysql2": "^2.2.5",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "pug": "^3.0.2",
     "sequelize": "^6.5.1",
